Front page image and logo changed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1068,7 +1068,7 @@ p.muted {
 .splash {
   min-height: 750px;
   max-height: 960px;
-  background-image:url(../img/bl-book-stacks.png);
+  background-image:url(../img/bl-above.jpg);
   background-size:cover;
   background-attachment:fixed;
   color:#fff;
