Footer icons changed

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -11,9 +11,9 @@
       <div class="row">
         <div id="footer_links">
             <ul>
-              <li><i class="glyphicon glyphicon-envelope glyphicon-inverse"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>  
-              <li><i class="icon-twitter glyphicon-inverse"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>  
-              <li><i class="icon-info-sign glyphicon-inverse"></i> <a href="/about">About</a></li>
+              <li><i class="fa fa-envelope"></i> <a href="mailto:{{contact_email}}">{{ _('Email') }}</a></li>  
+              <li><i class="fa fa-twitter"></i> <a href="http://twitter.com/{{contact_twitter}}">{{ _('Twitter') }}</a></li>  
+              <li><i class="fa fa-info-circle"></i> <a href="/about">About</a></li>
             </ul>
       </div>
   </div>
