--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -6,7 +6,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img src="{{url_for('static',filename='img/' + logo)}}" alt="{{brand}}"></a>
+          <var id="logo-black" data-src="{{url_for('static',filename='img/default_logo.png')}}"/>
+          <var id="logo-white" data-src="{{url_for('static',filename='img/default_logo_white.png')}}"/>
+          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo" src="{% if active_page == 'index' %}{{url_for('static',filename='img/default_logo_white.png')}} {% else %}{{url_for('static',filename='img/default_logo.png')}} {% endif %}" alt="{{brand}}"></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
