--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -5,35 +5,40 @@
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
-    <section="mid-grey">
-    <div class="container-main">
-        <div class="container">
-                <div class="col-xs-12 xs-center">
-                    {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
+    
+
+<div class="container-padded">
+    <section class="mid-grey">
+        <div class="container padding-top">
+                {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                     {{ privacy.render_lock_page() }}
-                    {% else %}
-                    <section id="user-data">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <h1>{{user.fullname}}</h1>
-                            </div>
-                        </div>
+                {% else %}
+                    
+                    
+                <section id="user-data">
                         {{ helper.render_user_profile(user, upload_method, settings=False, private=False) }}
-                    </section>
-                    {% if apps_created %}
-                    <section id="created-apps" style="margin-top:10px;">
-                        {{render_grid_apps(apps_created, "Created Projects", upload_method)}}
-                    </section>
-                    {% endif %}
-                    {% if apps %}
-                    <section id="contributed-apps" style="margin-top:10px;">
-                        {{render_grid_apps(apps, "Contributions", upload_method)}}
-                    </section>
-                    {% endif %}
-                    {% endif %}
-                </div>
-            </div>
+                </section>
         </div>
     </section>
+    
+                    {% if apps_created %}    
+                        
+    <section id="created-apps white" style="margin-top:10px;">
+        {{render_grid_apps(apps_created, "Created Projects", upload_method)}}
+    </section>
+                    {% endif %}
+                        
+                    {% if apps %}    
+                        
+    <section id="contributed-apps white" style="margin-top:10px;">
+                            {{render_grid_apps(apps, "Contributions", upload_method)}}
+    </section>
+                    {% endif %}
+                
+                {% endif %}
+                
+            
+</div>
+
 {{ broken_image() }}
 {% endblock %}
