--- a/templates/account/settings.html
+++ b/templates/account/settings.html
@@ -4,6 +4,7 @@
 {% import "account/_helpers.html" as helper %}
 
 {% block content %}
+    <div class="container-main">
 <div class="row">
     <div class="col-md-3">
         {{ helper.render_account_local_nav(current_user, active_link) }} 
@@ -18,4 +19,5 @@
         {% endif %}
     </div>
 </div>
+    </div>
 {% endblock %}
